--- a/src/Datadog.Trace.ClrProfiler.Native/Resource.rc
+++ b/src/Datadog.Trace.ClrProfiler.Native/Resource.rc
@@ -90,10 +90,10 @@ END
 // ASSEMBLY
 //
 
-NETCOREAPP20_MANAGED_ENTRYPOINT_DLL ASSEMBLY "..\\bin\\ProfilerResources\\netcoreapp2.0\\Datadog.Trace.ClrProfiler.Managed.Loader.dll"
-NETCOREAPP20_MANAGED_ENTRYPOINT_SYMBOLS SYMBOLS "..\\bin\\ProfilerResources\\netcoreapp2.0\\Datadog.Trace.ClrProfiler.Managed.Loader.pdb"
-NET45_MANAGED_ENTRYPOINT_DLL ASSEMBLY "..\\bin\\ProfilerResources\\net45\\Datadog.Trace.ClrProfiler.Managed.Loader.dll"
-NET45_MANAGED_ENTRYPOINT_SYMBOLS SYMBOLS "..\\bin\\ProfilerResources\\net45\\Datadog.Trace.ClrProfiler.Managed.Loader.pdb"
+NETCOREAPP20_MANAGED_ENTRYPOINT_DLL ASSEMBLY "..\\..\\bin\\bin\\src\\Datadog.Trace.ClrProfiler.Managed.Loader\\Release\\netcoreapp2.0\\Datadog.Trace.ClrProfiler.Managed.Loader.dll"
+NETCOREAPP20_MANAGED_ENTRYPOINT_SYMBOLS SYMBOLS "..\\..\\bin\\bin\\src\\Datadog.Trace.ClrProfiler.Managed.Loader\\Release\\netcoreapp2.0\\Datadog.Trace.ClrProfiler.Managed.Loader.pdb"
+NET45_MANAGED_ENTRYPOINT_DLL ASSEMBLY "..\\..\\bin\\bin\\src\\Datadog.Trace.ClrProfiler.Managed.Loader\\Release\\net45\\Datadog.Trace.ClrProfiler.Managed.Loader.dll"
+NET45_MANAGED_ENTRYPOINT_SYMBOLS SYMBOLS "..\\..\\bin\\bin\\src\\Datadog.Trace.ClrProfiler.Managed.Loader\\Release\\net45\\Datadog.Trace.ClrProfiler.Managed.Loader.pdb"
 
 
 
