--- a/test/benchmarks/Benchmarks.Trace/Benchmarks.Trace.csproj
+++ b/test/benchmarks/Benchmarks.Trace/Benchmarks.Trace.csproj
@@ -18,6 +18,12 @@
     <NoWarn>1591</NoWarn>
   </PropertyGroup>
 
+  <!--  Move bin and obj folders to root -->
+  <PropertyGroup>
+    <BaseOutputPath>..\..\..\bin\bin\test\benchmarks\$(MSBuildProjectName)</BaseOutputPath>
+    <BaseIntermediateOutputPath>..\..\..\bin\obj\test\benchmarks\$(MSBuildProjectName)</BaseIntermediateOutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="DuckTyping\DuckTypeMethodBenchmark.cs" />
     <Compile Remove="DuckTyping\DuckTypeStructCopyValueTypePropertyBenchmark.cs" />
