--- a/test/test-applications/integrations/dependency-libs/Directory.Build.props
+++ b/test/test-applications/integrations/dependency-libs/Directory.Build.props
@@ -3,4 +3,9 @@
   This file intentionally left blank...
   to stop msbuild from looking up the folder hierarchy
   -->
+  <!--  Move bin and obj folders to root -->
+  <PropertyGroup>
+    <BaseOutputPath>$(MSBuildThisFileDirectory)..\..\..\..\bin\bin\test\test-applications\integrations\dependency-libs\$(MSBuildProjectName)</BaseOutputPath>
+    <BaseIntermediateOutputPath>$(MSBuildThisFileDirectory)..\..\..\..\bin\obj\test\test-applications\integrations\dependency-libs\$(MSBuildProjectName)</BaseIntermediateOutputPath>
+  </PropertyGroup>
 </Project>
