Use accurate label and newlines

--- a/.dependabot/config.yaml
+++ b/.dependabot/config.yaml
@@ -4,5 +4,4 @@ update_configs:
     directory: "/"
     update_schedule: "daily"
     default_labels:
-      - "dependencies"
-      - "dependabot"
+      - "vendors"
