Swap to github folder per docs

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,6 @@
-version: 1
+version: 2
 update_configs:
-  - package_manager: "dotnet:nuget"
+  - package_manager: "nuget"
     directory: "/honeypot"
     update_schedule: "daily"
     default_labels:
