--- a/.azure-pipelines/ultimate-pipeline.yml
+++ b/.azure-pipelines/ultimate-pipeline.yml
@@ -21,6 +21,7 @@ variables:
   artifacts: $(System.DefaultWorkingDirectory)/bin/artifacts
   ddApiKey: $(DD_API_KEY)
   isMainBranch: $[eq(variables['Build.SourceBranch'], 'refs/heads/master')]
+  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
   DD_DOTNET_TRACER_MSBUILD:
 
 # Declare the datadog agent as a resource to be used as a pipeline service
@@ -70,6 +71,8 @@ stages:
     pool:
       vmImage: windows-2019
     steps:
+    - checkout: self
+      fetchDepth: 1
 
     - task: UseDotNet@2
       displayName: install dotnet core sdk 5.0
@@ -231,6 +234,8 @@ stages:
     pool:
       vmImage: macOS-10.15
     steps:
+    - checkout: self
+      fetchDepth: 1
 
     - task: DownloadPipelineArtifact@2
       inputs:
