--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -151,7 +151,7 @@ services:
       context: ./
       dockerfile: ./build/docker/native.dockerfile
     image: datadog-native
-    command: ls /project
+    command: ["/project/build.sh", "CompileNativeSrcLinux", "--skip"]
     volumes:
     - ./:/project
 
