--- a/.azure-pipelines/ultimate-pipeline.yml
+++ b/.azure-pipelines/ultimate-pipeline.yml
@@ -37,42 +37,44 @@ resources:
 
 # Stages
 stages:
-- stage: build
+- stage: build_managed
   dependsOn: []
   jobs:
-  - job: build_managed
-    pool:
-      vmImage: windows-2019
-    steps:
-    - task: UseDotNet@2
-      displayName: Install dotnet core sdk 5.0
-      inputs:
-        packageType: sdk
-        version: $(dotnetCoreSdk5Version)
-        installationPath: $(Agent.ToolsDirectory)/dotnet
+    - job: build_managed
+      pool:
+        vmImage: windows-2019
+      steps:
+        - task: UseDotNet@2
+          displayName: Install dotnet core sdk 5.0
+          inputs:
+            packageType: sdk
+            version: $(dotnetCoreSdk5Version)
+            installationPath: $(Agent.ToolsDirectory)/dotnet
 
-    - script: build.cmd CreateRequiredDirectories --skip
-      displayName: Create required directories
+        - script: build.cmd CreateRequiredDirectories --skip
+          displayName: Create required directories
 
-    - script: build.cmd RestoreNuGet --skip
-      displayName: NuGet Restore 
+        - script: build.cmd RestoreNuGet --skip
+          displayName: NuGet Restore
 
-    - script: build.cmd CompileManagedSrc --skip
-      displayName: Compile Managed src 
+        - script: build.cmd CompileManagedSrc --skip
+          displayName: Compile Managed src
 
-    - script: build.cmd PublishManagedProfiler --skip
-      displayName: Publish Managed Profiler 
+        - script: build.cmd PublishManagedProfiler --skip
+          displayName: Publish Managed Profiler
 
-    - publish: $(System.DefaultWorkingDirectory)/bin
-      displayName: Upload working directory after the managed build
-      artifact: build_managed-bin
+        - publish: $(System.DefaultWorkingDirectory)/bin
+          displayName: Upload working directory after the managed build
+          artifact: build_managed-bin
 
-    - publish: $(System.DefaultWorkingDirectory)/packages
-      displayName: Upload NuGet packages
-      artifact: build_managed-packages
+        - publish: $(System.DefaultWorkingDirectory)/packages
+          displayName: Upload NuGet packages
+          artifact: build_managed-packages
 
-  - job: build_native_windows
-    dependsOn: build_managed # The native build relies on Datadog.Trace.ClrProfiler.Managed.Loader to be built
+- stage: build_native_windows
+  dependsOn: build_managed # The native build relies on Datadog.Trace.ClrProfiler.Managed.Loader to be built
+  jobs:
+  - job: build
     pool:
       vmImage: windows-2019
     steps:
@@ -134,116 +136,10 @@ stages:
     ##   displayName: Upload Windows tracer home zip
     ##   artifact: windows-tracer-home
 
-#  - job: build_native_linux
-#    dependsOn: build_managed # The native build relies on Datadog.Trace.ClrProfiler.Managed.Loader to be built
-#    pool:
-#      vmImage: ubuntu-20.04
-#    steps:
-#
-#    - task: DownloadPipelineArtifact@2
-#      inputs:
-#        artifact: build_managed-bin
-#        path: $(System.DefaultWorkingDirectory)/bin
-#
-#    - task: DockerCompose@0
-#      displayName: docker-compose run Profiler
-#      inputs:
-#        containerregistrytype: Container Registry
-#        dockerComposeCommand: run Profiler
-#
-#    - task: DockerCompose@0
-#      displayName: docker-compose run package
-#      inputs:
-#        containerregistrytype: Container Registry
-#        dockerComposeCommand: run package
-#
-#    - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.ClrProfiler.Native/bin/Release/x64
-#      displayName: Uploading linux tracer home artifact
-#      artifact: build-linux-tracer-home
-#
-#    - publish: $(System.DefaultWorkingDirectory)/deploy/linux
-#      displayName: Publish Linux packages
-#      artifact: linux-packages
-#
-#  - job: build_native_alpine_linux
-#    dependsOn: build_managed # The native build relies on Datadog.Trace.ClrProfiler.Managed.Loader to be built
-#    pool:
-#      vmImage: ubuntu-20.04
-#    steps:
-#    - checkout: none
-#
-#    - task: DownloadPipelineArtifact@2
-#      inputs:
-#        artifact: build-managed
-#        path: $(System.DefaultWorkingDirectory)
-#
-#    - script: |
-#        chmod +x $(System.DefaultWorkingDirectory)/build/docker/Datadog.Trace.ClrProfiler.Native.sh
-#      displayName: 'Workaround: Restore wiped executable permission on build/docker/Datadog.Trace.ClrProfiler.Native.sh'
-#
-#    - task: DockerCompose@0
-#      displayName: docker-compose run Profiler.Alpine
-#      inputs:
-#        containerregistrytype: Container Registry
-#        dockerComposeCommand: run Profiler.Alpine
-#
-#    - script: |
-#        chmod +x $(System.DefaultWorkingDirectory)/build/docker/package.sh
-#      displayName: 'Workaround: Restore wiped executable permission on build/docker/package.sh'
-#
-#    - task: DockerCompose@0
-#      displayName: docker-compose run package.alpine
-#      inputs:
-#        containerregistrytype: Container Registry
-#        dockerComposeCommand: run package.alpine
-#
-#    - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.ClrProfiler.Native/bin/Release/x64
-#      displayName: Uploading alpine linux tracer home artifact
-#      artifact: build-alpine-linux-tracer-home
-#
-#    - publish: $(System.DefaultWorkingDirectory)/deploy/linux
-#      displayName: Publish Alpine Linux package
-#      artifact: linux-alpine-packages
-#
-#  - job: build_native_linux_arm64
-#    dependsOn: build_managed # The native build relies on Datadog.Trace.ClrProfiler.Managed.Loader to be built
-#    pool: Arm64
-#    workspace:
-#      clean: all
-#
-#    steps:
-#    - checkout: none
-#
-#    - task: DownloadPipelineArtifact@2
-#      inputs:
-#        artifact: build-managed
-#        path: $(System.DefaultWorkingDirectory)
-#
-#    - script: |
-#        chmod +x $(System.DefaultWorkingDirectory)/build/docker/Datadog.Trace.ClrProfiler.Native.sh
-#      displayName: 'Workaround: Restore wiped executable permission on build/docker/Datadog.Trace.ClrProfiler.Native.sh'
-#
-#    - task: DockerCompose@0
-#      displayName: docker-compose run Profiler
-#      inputs:
-#        containerregistrytype: Container Registry
-#        dockerComposeCommand: run Profiler
-#
-#    - script: |
-#        chmod +x $(System.DefaultWorkingDirectory)/build/docker/package.sh
-#      displayName: 'Workaround: Restore wiped executable permission on build/docker/package.sh'
-#
-#    - task: DockerCompose@0
-#      displayName: docker-compose run package
-#      inputs:
-#        containerregistrytype: Container Registry
-#        dockerComposeCommand: run package
-#
-#    - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.ClrProfiler.Native/bin/Release/x64
-#      artifact: build-linux-tracer-home-arm64
-
-  - job: build_native_macos
-    dependsOn: build_managed # The native build relies on Datadog.Trace.ClrProfiler.Managed.Loader to be built
+- stage: build_native_macos
+  dependsOn: build_managed # The native build relies on Datadog.Trace.ClrProfiler.Managed.Loader to be built
+  jobs:
+  - job: build
     pool:
       vmImage: macOS-10.15
     steps:
@@ -265,20 +161,122 @@ stages:
       displayName: Uploading macos profiler artifact
       artifact: tracer-home-macos
 
-- stage: unit_tests
-  dependsOn: build
+- stage: build_native_linux
+  dependsOn: build_managed # The native build relies on Datadog.Trace.ClrProfiler.Managed.Loader to be built
   jobs:
-  - job: unit_tests_managed
-    strategy:
-      matrix:
-        windows:
-          imageName: windows-2019
-        linux:
-          imageName: ubuntu-18.04
-        macos:
-          imageName: macOS-10.15
+  - job: linux
     pool:
-      vmImage: $(imageName)
+      vmImage: ubuntu-20.04
+    steps:
+
+    - task: DownloadPipelineArtifact@2
+      inputs:
+        artifact: build_managed-bin
+        path: $(System.DefaultWorkingDirectory)/bin
+
+    - task: DockerCompose@0
+      displayName: docker-compose run Profiler
+      inputs:
+        containerregistrytype: Container Registry
+        dockerComposeCommand: run Profiler
+
+    - task: DockerCompose@0
+      displayName: docker-compose run package
+      inputs:
+        containerregistrytype: Container Registry
+        dockerComposeCommand: run package
+
+    - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.ClrProfiler.Native/bin/Release/x64
+      displayName: Uploading linux tracer home artifact
+      artifact: build-linux-tracer-home
+
+    - publish: $(System.DefaultWorkingDirectory)/deploy/linux
+      displayName: Publish Linux packages
+      artifact: linux-packages
+
+  #  - job: build_native_alpine_linux
+  #    dependsOn: build_managed # The native build relies on Datadog.Trace.ClrProfiler.Managed.Loader to be built
+  #    pool:
+  #      vmImage: ubuntu-20.04
+  #    steps:
+  #    - checkout: none
+  #
+  #    - task: DownloadPipelineArtifact@2
+  #      inputs:
+  #        artifact: build-managed
+  #        path: $(System.DefaultWorkingDirectory)
+  #
+  #    - script: |
+  #        chmod +x $(System.DefaultWorkingDirectory)/build/docker/Datadog.Trace.ClrProfiler.Native.sh
+  #      displayName: 'Workaround: Restore wiped executable permission on build/docker/Datadog.Trace.ClrProfiler.Native.sh'
+  #
+  #    - task: DockerCompose@0
+  #      displayName: docker-compose run Profiler.Alpine
+  #      inputs:
+  #        containerregistrytype: Container Registry
+  #        dockerComposeCommand: run Profiler.Alpine
+  #
+  #    - script: |
+  #        chmod +x $(System.DefaultWorkingDirectory)/build/docker/package.sh
+  #      displayName: 'Workaround: Restore wiped executable permission on build/docker/package.sh'
+  #
+  #    - task: DockerCompose@0
+  #      displayName: docker-compose run package.alpine
+  #      inputs:
+  #        containerregistrytype: Container Registry
+  #        dockerComposeCommand: run package.alpine
+  #
+  #    - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.ClrProfiler.Native/bin/Release/x64
+  #      displayName: Uploading alpine linux tracer home artifact
+  #      artifact: build-alpine-linux-tracer-home
+  #
+  #    - publish: $(System.DefaultWorkingDirectory)/deploy/linux
+  #      displayName: Publish Alpine Linux package
+  #      artifact: linux-alpine-packages
+  #
+  #  - job: build_native_linux_arm64
+  #    dependsOn: build_managed # The native build relies on Datadog.Trace.ClrProfiler.Managed.Loader to be built
+  #    pool: Arm64
+  #    workspace:
+  #      clean: all
+  #
+  #    steps:
+  #    - checkout: none
+  #
+  #    - task: DownloadPipelineArtifact@2
+  #      inputs:
+  #        artifact: build-managed
+  #        path: $(System.DefaultWorkingDirectory)
+  #
+  #    - script: |
+  #        chmod +x $(System.DefaultWorkingDirectory)/build/docker/Datadog.Trace.ClrProfiler.Native.sh
+  #      displayName: 'Workaround: Restore wiped executable permission on build/docker/Datadog.Trace.ClrProfiler.Native.sh'
+  #
+  #    - task: DockerCompose@0
+  #      displayName: docker-compose run Profiler
+  #      inputs:
+  #        containerregistrytype: Container Registry
+  #        dockerComposeCommand: run Profiler
+  #
+  #    - script: |
+  #        chmod +x $(System.DefaultWorkingDirectory)/build/docker/package.sh
+  #      displayName: 'Workaround: Restore wiped executable permission on build/docker/package.sh'
+  #
+  #    - task: DockerCompose@0
+  #      displayName: docker-compose run package
+  #      inputs:
+  #        containerregistrytype: Container Registry
+  #        dockerComposeCommand: run package
+  #
+  #    - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.ClrProfiler.Native/bin/Release/x64
+  #      artifact: build-linux-tracer-home-arm64
+
+- stage: unit_tests_windows
+  dependsOn: build_native_windows
+  pool:
+    vmImage: windows-2019
+  jobs:
+  - job: managed
     steps:
 
     - template: steps/install-dotnet.yml
@@ -294,14 +292,102 @@ stages:
         artifact: build_managed-packages
         path: $(System.DefaultWorkingDirectory)/packages
 
-    # Ideally we would use the following MSBuild command which can more intelligently parallelize the build
-    #    - task: MSBuild@1
-    #      displayName: Build all managed unit test projects
-    #      inputs:
-    #        solution: Datadog.Trace.proj
-    #        configuration: $(buildConfiguration)
-    #        msbuildArguments: /t:BuildCsharpTests
-    #        maximumCpuCount: true
+    - task: DotNetCoreCLI@2
+      displayName: CompileManagedUnitTests
+      inputs:
+        command: run
+        arguments: -- CompileManagedUnitTests --skip
+        projects: build/_build/_build.csproj
+
+    - task: DotNetCoreCLI@2
+      displayName: RunManagedUnitTests
+      inputs:
+        command: run
+        arguments: -- RunManagedUnitTests --skip
+        projects: build/_build/_build.csproj
+
+  - job: native
+    steps:
+    - task: DownloadPipelineArtifact@2
+      inputs:
+        artifact: build_native_windows-bin
+        path: $(System.DefaultWorkingDirectory)/bin
+
+    - task: DotNetCoreCLI@2
+      displayName: CompileNativeTestsWindows
+      inputs:
+        command: run
+        arguments: -- CompileNativeTestsWindows --skip
+        projects: build/_build/_build.csproj
+
+    - task: DotNetCoreCLI@2
+      displayName: RunNativeTestsWindows
+      inputs:
+        command: run
+        arguments: -- RunNativeTestsWindows --skip
+        projects: build/_build/_build.csproj
+
+    - task: PublishTestResults@2
+      displayName: publish test results
+      inputs:
+        testResultsFiles: test/**/test*.xml
+      condition: succeededOrFailed()
+
+- stage: unit_tests_macos
+  dependsOn: build_native_macos
+  pool:
+    vmImage: macOS-10.15
+  jobs:
+  - job: unit_tests_managed
+    steps:
+
+    - template: steps/install-dotnet.yml
+
+    - task: DownloadPipelineArtifact@2
+      inputs:
+        artifact: build_native_windows-bin
+        path: $(System.DefaultWorkingDirectory)/bin
+
+    - task: DownloadPipelineArtifact@2
+      inputs:
+        displayName: Download Restored packages
+        artifact: build_managed-packages
+        path: $(System.DefaultWorkingDirectory)/packages
+
+    - task: DotNetCoreCLI@2
+      displayName: CompileManagedUnitTests
+      inputs:
+        command: run
+        arguments: -- CompileManagedUnitTests --skip
+        projects: build/_build/_build.csproj
+
+    - task: DotNetCoreCLI@2
+      displayName: RunManagedUnitTests
+      inputs:
+        command: run
+        arguments: -- RunManagedUnitTests --skip
+        projects: build/_build/_build.csproj
+
+- stage: unit_tests_linux
+  dependsOn: build_native_linux
+  pool:
+    vmImage: ubuntu-18.04
+  jobs:
+  - job: managed
+    steps:
+
+    - template: steps/install-dotnet.yml
+
+    - task: DownloadPipelineArtifact@2
+      inputs:
+        artifact: build_native_windows-bin
+        path: $(System.DefaultWorkingDirectory)/bin
+
+    - task: DownloadPipelineArtifact@2
+      inputs:
+        displayName: Download Restored packages
+        artifact: build_managed-packages
+        path: $(System.DefaultWorkingDirectory)/packages
 
     - task: DotNetCoreCLI@2
       displayName: CompileManagedUnitTests
@@ -340,38 +426,8 @@ stages:
       env:
         DD_SERVICE: dd-trace-dotnet
 
-  - job: native_unit_tests_windows
-    pool:
-      vmImage: windows-2019
-
-    steps:
-    - task: DownloadPipelineArtifact@2
-      inputs:
-        artifact: build_native_windows-bin
-        path: $(System.DefaultWorkingDirectory)/bin
-
-    - task: DotNetCoreCLI@2
-      displayName: CompileNativeTestsWindows
-      inputs:
-        command: run
-        arguments: -- CompileNativeTestsWindows --skip
-        projects: build/_build/_build.csproj
-
-    - task: DotNetCoreCLI@2
-      displayName: RunNativeTestsWindows
-      inputs:
-        command: run
-        arguments: -- RunNativeTestsWindows --skip
-        projects: build/_build/_build.csproj
-
-    - task: PublishTestResults@2
-      displayName: publish test results
-      inputs:
-        testResultsFiles: test/**/test*.xml
-      condition: succeededOrFailed()
-
-- stage: integration_tests
-  dependsOn: build
+- stage: integration_tests_windows
+  dependsOn: build_native_windows
   jobs:
 
   - job: Windows
@@ -577,6 +633,10 @@ stages:
         dockerComposeCommand: down
       condition: succeededOrFailed()
 
+- stage: integration_tests_linux
+  dependsOn: build_native_linux
+  jobs:
+
   - job: Linux
     strategy:
       matrix:
@@ -779,7 +839,7 @@ stages:
       condition: succeededOrFailed()
 
 - stage: benchmarks
-  dependsOn: build
+  dependsOn: build_native_windows
   condition: and(succeeded(), false)
   jobs:
 
@@ -833,7 +893,7 @@ stages:
         script: 'Start-Sleep -s 120'
 
 - stage: dotnet_tool
-  dependsOn: build
+  dependsOn: build_native_windows
   jobs:
   - job: build_runner_tool_and_standalone
 
@@ -994,7 +1054,7 @@ stages:
       artifact: runner-dotnet-tool
 
 - stage: upload
-  dependsOn: build
+  dependsOn: [build_native_windows, build_native_linux, build_native_macos]
   jobs:
   - job: s3_upload
 
@@ -1082,8 +1142,9 @@ stages:
           )
         )
 
+
 - stage: throughput
-  dependsOn: build
+  dependsOn: build_native_linux
   condition: and(succeeded(), false)
   jobs:
 
